[package]
name = "feat"
version = "0.1.0"
authors = ["Nathan LeClaire <nathan.leclaire@gmail.com>"]
edition = "2018"

[dependencies]
csv = "1.1"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
toml = "0.5.8"
chrono-tz = "0.5.3"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
clap = "3.0.0-beta.2"
sentry = "0.23.0"
